style/style.css
/* ... */
.header__content {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: center;
    width: 100%;
    height: 100%;
    gap: 50px;
}

.header__title {
    width: 100%;
    max-width: 580px;
    font-weight: 700;
    font-size: 72px;
    line-height: 108px;

    color: rgba(184, 140, 255, 0.2);

    -webkit-text-fill-color: rgba(184, 140, 255, 0.2);
    -webkit-text-stroke-width: 1px;
    -webkit-text-stroke-color: #B88CFF;
}

.header__descr {
    font-weight: 400;
    font-size: 24px;
    line-height: 36px;
    color: var(--primaryColor);
    width: 100%;
    max-width: 260px;
}

.header__icon-scroll {
    align-self: center;
    transform: rotate(-90deg);
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 20px 0;
}

.header__icon-scroll::before,
.header__icon-scroll::after {
    content: '';
    display: block;
    border-radius: 10px;
    height: 20px;
    width: 38px;
    position: absolute;
}

.header__icon-scroll::before {
    border: 1px solid #fff;
    left: 0;
}

.header__icon-scroll::after {
    width: 10px;
    height: 10px;
    left: 6px;
    top: 50%;
    transform: translate(0, -50%);
    background: #fff;
    border-radius: 50%;
    animation: ballScroll 1.5s linear infinite;
}

/* Main - контент сайта
========================================================================= */
.main {
    width: 100%;
    flex-grow: 1;
}


section.section {
    /* margin-top: 100px; */
    max-width: 100%;
    
    display: flex;
    width: 100%;
    overflow: hidden;
    padding-bottom: 100px;
}

.portfolio__content {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: flex-start;
    width: 100%;
    position: relative;

}


.section__title {
    font-weight: 700;
    font-size: 36px;
    line-height: 54px;
    text-align: left;
}

.portfolio__grid {
    margin-top: 50px;
    display: grid;
    width: 100%;
    grid-template-columns: repeat(3, minmax(260px, 500px));
    gap: 20px;
    justify-content: center;
    align-items: center;
}

.portfolio__card {
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
}

.portfolio__card:nth-child(3n + 2) .portfolio__card-content {
    transform: translateY(40px);
}

.portfolio__card-content {
    padding: 75px 2px 50px;
    background: #b88cff10;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 50px;
    transition: all .15s linear;
    position: relative;
    z-index: 5;
    cursor: pointer;
}

.portfolio__card-content._active {
    transform: scale(1.01);
    box-shadow: 0 0 30px rgba(255, 255, 255, 0.6);
}


.portfolio__card-link {
    display: flex;
    width: 100%;
    z-index: 2;
    transition: .2s linear;
}

.portfolio__card-img {
    width: 100%;
}


.section.about {
    margin-top: unset;
}

.about__content {
    display: flex;
    width: 100%;
    justify-content: space-between;
    align-items: center;
    gap: 20px;
}

.about__info {
    display: flex;
    width: 100%;
    max-width: 500px;
    flex-direction: column;
    justify-content: space-between;
    align-items: flex-start;
    gap: 20px;
}

.about__info-title {
    font-weight: 700;
    font-size: clamp(24px, 3vw, 36px);
    line-height: clamp(40px, 4vw, 54px);
    width: 100%;
    color: var(--buttonHoverColor);
}

.about__list {
    display: flex;
    flex-direction: column;
    gap: 16px;
    width: 100%;
    align-items: flex-start;
}

.about__list-item p {
    font-weight: 400;
    font-size: clamp(16px, 3vw, 20px);
    line-height: 120%;
    width: 100%;
    text-align: left;
}


.about__images {
    width: 100%;
    max-width: 500px;

    aspect-ratio: 1;
    position: relative;
    transition: all .3s linear;
}

.about__images:hover {
    box-shadow: 0 0 30px #fff;
}

.about__images::before,
.about__images::after {
    content: '';
    display: block;
    width: 100%;
    height: 100%;
    background: #2c0e53;
    position: absolute;
    transition: all .2s linear;
    z-index: -1;
}

.about__images::before {
    left: -10px;
    top: -10px;
}

.about__images::after {
    bottom: -10px;
    right: -10px;
}


.about__images:hover:before {
    left: 0;
    top: 0;
}

.about__images:hover:after {
    bottom: 0;
    right: 0;
}

.about__img {
    width: 100%;
    aspect-ratio: 1;
    object-fit: cover;
    z-index: 2;
    position: absolute;
    left: 0;
    top: 0;
    bottom: 0;
    right: 0;
    transition: all .3s linear;
}

.about__img:last-child {
    opacity: 0;
    transform: scale(0.7);
}

.about__images:hover .about__img:last-child {
    opacity: 1;
    transform: scale(1);
}

.about__images:hover .about__img:first-child {
    opacity: 0;
    transform: scale(0.7);

}


.studio__content {
    display: flex;
    width: 100%;
    flex-direction: column;
}

.studio__content-text {
    display: flex;
    flex-direction: column;
    width: 100%;
    text-align-last: left;
    justify-content: center;
    gap: 20px;
    margin-bottom: 50px;
}

.studio__content-deskr {
    font-weight: 400;
    font-size: 24px;
    line-height: 36px;
}

.studio__body {
    display: flex;
    width: 100%;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 50px;
}

.studio__body-title {
    font-weight: 700;
    font-size: 24px;
    line-height: 36px;
}

.studio__cards {
    width: 100%;
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
    row-gap: 25px;
    column-gap: 20px;
}


.studio__item {
    display: flex;
    flex-direction: column;
    width: 100%;
    padding: 50px 14px;
    justify-content: center;
    align-items: center;
    background: #2c0e5373;
    gap: 30px;
    transition: box-shadow .3s linear;
}

.studio__item:hover {
    box-shadow: 0 0 30px #fff;
}

.studio__item-img {
    transition: all .2s linear;
    user-select: none;
}
/* ... */

